Bug 257979 - Fix bad assertion in CanvasNoiseInjection's isIndexInBounds()
Summary: Fix bad assertion in CanvasNoiseInjection's isIndexInBounds()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-12 13:32 PDT by Chris Dumez
Modified: 2023-06-12 13:42 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-06-12 13:32:28 PDT
Fix bad assertion in CanvasNoiseInjection's isIndexInBounds(). It causes crashes in API tests such as AdvancedPrivacyProtections.VerifyPixelsFromNoisyCanvas2DAPI.
Comment 1 Chris Dumez 2023-06-12 13:33:48 PDT
<rdar://problem/108168809>
Comment 2 Chris Dumez 2023-06-12 13:34:04 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14885
Comment 3 Chris Dumez 2023-06-12 13:36:17 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14886
Comment 4 EWS 2023-06-12 13:42:34 PDT
Committed 265085@main (02f749891721): <https://commits.webkit.org/265085@main>

Reviewed commits have been landed. Closing PR #14886 and removing active labels.