Fix bad assertion in CanvasNoiseInjection's isIndexInBounds() https://bugs.webkit.org/show_bug.cgi?id=257979

Reviewed by Wenson Hsieh.

Fix bad assertion in CanvasNoiseInjection's isIndexInBounds(). It causes
crashes in API tests such as AdvancedPrivacyProtections.VerifyPixelsFromNoisyCanvas2DAPI.

* Source/WebCore/html/CanvasNoiseInjection.cpp:
(WebCore::isIndexInBounds):

Canonical link: https://commits.webkit.org/265085@main